# Pixels-Backend

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  main.py  pyproject.toml  worker.py
lib/: constants.py  cron.py  db.py  face_analyzer.py  faiss_manager.py  supabase_client.py  utils.py  video_embedder.py
routes/: get_matching_images.py  get_matching_videos.py  get_whois.py  recheck_images.py  verify_photo.py
